syntax = "proto3";

option csharp_namespace = "Toppings.Tests";

package toppings;

service Toppings {

    rpc GetAvailable(AvailableRequest) returns (AvailableResponse);
    rpc DecrementStock(DecrementStockRequest) returns (DecrementStockResponse);

}

message DecrementStockRequest {
    repeated string topping_ids = 1;
}

message DecrementStockResponse { }


message AvailableRequest { }

message AvailableResponse {
    repeated AvailableTopping toppings = 1;
}

message AvailableTopping {
    Topping topping = 1;
    int32 quantity = 2;
}

message Topping {

    string id = 1;
    string name = 2;
    float price = 3;

}